--- a/snippets/form.liquid
+++ b/snippets/form.liquid
@@ -10,8 +10,7 @@
   message - "string" optional,
   success_message - "string" optional,
   error_message - "string" optional,
-  button_label - "string" optional,
-  button_variables - "string" optional
+  button_label - "string" optional
 
   Usage:
 
@@ -24,46 +23,27 @@
       message: your_id,
       success_message: your_id,
       error_message: your_id,
-      button_label: your_id,
-      button_variables
+      button_label: your_id
   -%}
 
 {% endcomment %}
 
 {{ "form.css" | asset_url | stylesheet_tag }}
 
-<div id="{{- id -}}" class="form__inner" style="{{- button_variables | escape -}}">
-  <h2 class="form__title">
-    {%- if title != blank -%}
-      {{- title -}}
-    {%- else -%}
-      Contact us
-    {%- endif -%}
-  </h2>
+<div id="{{- id -}}" class="form__inner">
+  <h2 class="form__title h4">{{- title | default: "Get in touch"-}}</h2>
 
-  <div class="form__text bq-content rx-content">
-    {%- if description != blank -%}
-      {{- description -}}
-    {%- else -%}
-      Tell something about your company, describe what you do and what makes you unique.
-    {%- endif -%}
+  <div class="form__text text-large bq-content rx-content">
+    {{- description | default: "Tell something about your company, describe what you do and what makes you unique." -}}
   </div>
 
   {%- form 'contact' -%}
     <div class="form__block{% if form.errors.author %} form__block--error{%- endif -%}">
       <label class="form__label" for="author">
-        {%- if name != blank -%}
-          {{- name -}}
-        {%- else -%}
-          Name
-        {%- endif -%}
+        {{- name | default: "Name" -}}
 
         <span class="form__label-backlight">
-          {%- if name != blank -%}
-            {{- name -}}
-          {%- else -%}
-            Name
-          {%- endif -%}
+            {{- name | default: "Name" -}}
         </span>
       </label>
 
@@ -85,18 +65,10 @@
 
     <div class="form__block{% if form.errors.email %} form__block--error{%- endif -%}">
       <label class="form__label" for="email">
-        {%- if email != blank -%}
-          {{- email -}}
-        {%- else -%}
-          Email
-        {%- endif -%}
+        {{- email | default: "Email" -}}
 
         <span class="form__label-backlight">
-          {%- if email != blank -%}
-            {{- email -}}
-          {%- else -%}
-            Email
-          {%- endif -%}
+          {{- email | default: "Email" -}}
         </span>
       </label>
 
@@ -118,18 +90,10 @@
 
     <div class="form__block form__message{% if form.errors.body %} form__block--error{%- endif -%}">
       <label class="form__label" for="body">
-        {%- if message != blank -%}
-          {{- message -}}
-        {%- else -%}
-          Message
-        {%- endif -%}
+        {{- message | default: "Message" -}}
 
         <span class="form__label-backlight">
-          {%- if message != blank -%}
-            {{- message -}}
-          {%- else -%}
-            Message
-          {%- endif -%}
+         {{- message | default: "Message" -}}
         </span>
       </label>
 
@@ -152,24 +116,20 @@
     <div class="form__info">
       {%- if form.posted_successfully -%}
         <p class="success">
-          <i class="fa-solid fa-circle-check"></i> {%- if success_message != blank -%}{{- success_message -}}{%- else -%}Thanks for your message! We'll get back to you shortly{%- endif -%}
+          <i class="fa-solid fa-circle-check"></i> {{- success_message | default: "Thanks for your message! We'll get back to you shortly" -}}
         </p>
       {%- endif -%}
 
       {%- if form.errors != blank -%}
         <p class="error">
-          <i class="fa-solid fa-circle-exclamation"></i> {%- if error_message != blank -%}{{- error_message -}}{%- else -%}Oops, something went wrong. Please fix the errors and try again{%- endif -%}
+          <i class="fa-solid fa-circle-exclamation"></i> {{- error_message | default: "Oops, something went wrong. Please fix the errors and try again" -}}
         </p>
       {%- endif -%}
     </div>
 
     <div class="form__submit">
       <button class="button button--large button--primary">
-        {%- if button_label != blank -%}
-          {{- button_label -}}
-        {%- else -%}
-          Submit
-        {%- endif -%}
+        {{- button_label | default: "Send" -}}
       </button>
     </div>
   {%- endform -%}
